Successfully trained a classifier on NLP dataset.

--- a/Optimization.ipynb
+++ b/Optimization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,9 +101,9 @@
     "    for i in range(numIters):\n",
     "        cost = 0\n",
     "        for uniqueY in uniqueYs: \n",
-    "            cost += logAvgCost(X, ys[uniqueY], ws[uniqueY], regularization, lmda)\n",
-    "            ws[uniqueY] = updateWeightsGD(X, ys[uniqueY],\\\n",
-    "                ws[uniqueY], lr, regularization, lmda)\n",
+    "            cost += logAvgCost(X, ys[int(uniqueY)], ws[int(uniqueY)], regularization, lmda)\n",
+    "            ws[int(uniqueY)] = updateWeightsGD(X, ys[int(uniqueY)],\\\n",
+    "                ws[int(uniqueY)], lr, regularization, lmda)\n",
     "        cost /= uniqueYs.shape[0]\n",
     "        if i % logFreq == 0:\n",
     "            print(\"iter:\", i, \"cost:\", cost)\n",
@@ -146,9 +146,9 @@
     "    for i in range(numIters):\n",
     "        cost = 0\n",
     "        for uniqueY in uniqueYs: \n",
-    "            cost += logAvgCost(X, ys[uniqueY], ws[uniqueY], regularization, lmda)\n",
-    "            ws[uniqueY] = updateWeightsAdaGrad(X, ys[uniqueY],\\\n",
-    "                ws[uniqueY], lr, Ss[uniqueY], epsilon, regularization, lmda)\n",
+    "            cost += logAvgCost(X, ys[int(uniqueY)], ws[int(uniqueY)], regularization, lmda)\n",
+    "            ws[int(uniqueY)] = updateWeightsAdaGrad(X, ys[int(uniqueY)],\\\n",
+    "                ws[int(uniqueY)], lr, Ss[int(uniqueY)], epsilon, regularization, lmda)\n",
     "        cost /= uniqueYs.shape[0]\n",
     "        if i % logFreq == 0:\n",
     "            print(\"iter:\", i, \"cost:\", cost)\n",
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,25 +197,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "iter: 0 cost: 9.171039675266258\n",
-      "iter: 100 cost: 0.0780419604743979\n",
-      "iter: 200 cost: 0.059681815843701816\n",
-      "iter: 300 cost: 0.05203538584802823\n",
-      "iter: 400 cost: 0.04761466811195066\n",
-      "iter: 500 cost: 0.04464678293552123\n",
-      "iter: 600 cost: 0.04247749907692624\n",
-      "iter: 700 cost: 0.04080040349360599\n",
-      "iter: 800 cost: 0.03945171188530569\n",
-      "iter: 900 cost: 0.03833619130635034\n",
-      "Accuracy (Training): 0.97633959638135\n",
-      "Accuracy (Test): 0.95\n"
+      "iter: 0 cost: 8.745287319308373\n",
+      "iter: 100 cost: 0.08047161580376203\n",
+      "iter: 200 cost: 0.0612862602482915\n",
+      "iter: 300 cost: 0.053385599839098206\n",
+      "iter: 400 cost: 0.04883555817425237\n",
+      "iter: 500 cost: 0.04577769706669313\n",
+      "iter: 600 cost: 0.04353033336717747\n",
+      "iter: 700 cost: 0.04178374964997139\n",
+      "iter: 800 cost: 0.04037374487353195\n",
+      "iter: 900 cost: 0.0392017332186961\n",
+      "Accuracy (Training): 0.9756437021572721\n",
+      "Accuracy (Test): 0.9527777777777777\n"
      ]
     }
    ],
@@ -233,23 +233,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1437, 1)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "digYTrain.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "iter: 0 cost: 8.854384281421028\n",
-      "iter: 100 cost: 0.05260605045081612\n",
-      "iter: 200 cost: 0.04265014119521066\n",
-      "iter: 300 cost: 0.03833243396120719\n",
-      "iter: 400 cost: 0.03577810068697231\n",
-      "iter: 500 cost: 0.034046193080419576\n",
-      "iter: 600 cost: 0.03278032242059598\n",
-      "iter: 700 cost: 0.03180727542773276\n",
-      "iter: 800 cost: 0.03103504109167335\n",
-      "iter: 900 cost: 0.030402170707007153\n",
+      "iter: 0 cost: 8.881569781496816\n",
+      "iter: 100 cost: 0.05327439542098885\n",
+      "iter: 200 cost: 0.043159124027085737\n",
+      "iter: 300 cost: 0.03869798508779089\n",
+      "iter: 400 cost: 0.03605231149446609\n",
+      "iter: 500 cost: 0.034250503898755266\n",
+      "iter: 600 cost: 0.03292081115693914\n",
+      "iter: 700 cost: 0.03189008862229752\n",
+      "iter: 800 cost: 0.031062098164134817\n",
+      "iter: 900 cost: 0.0303797038947066\n",
       "Accuracy (Training): 0.9860821155184412\n",
       "Accuracy (Test): 0.9583333333333334\n"
      ]
@@ -269,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,19 +298,19 @@
     "tweets = pd.read_csv('./Tweets.csv', sep=',')\n",
     "\n",
     "# Process labels \n",
-    "yRaw = np.array(tweets['airline_sentiment'])\n",
-    "y = np.zeros(yRaw.shape)\n",
+    "textYRaw = np.array(tweets['airline_sentiment'])\n",
+    "textY = np.zeros(textYRaw.shape)\n",
     "# Convert y categories into numerical values \n",
-    "y[yRaw == 'negative'] = 0 \n",
-    "y[yRaw == 'neutral'] = 1\n",
-    "y[yRaw == 'positive'] = 2\n",
-    "y = np.expand_dims(y, axis=1)\n",
+    "textY[textYRaw == 'negative'] = 0 \n",
+    "textY[textYRaw == 'neutral'] = 1\n",
+    "textY[textYRaw == 'positive'] = 2\n",
+    "textY = np.expand_dims(textY, axis=1)\n",
     "\n",
     "# Clean text \n",
-    "XRaw = tweets['text'].tolist()\n",
-    "XCleaned = []\n",
-    "for i in range(len(XRaw)):\n",
-    "    rawText = XRaw[i]\n",
+    "textXRaw = tweets['text'].tolist()\n",
+    "textXCleaned = []\n",
+    "for i in range(len(textXRaw)):\n",
+    "    rawText = textXRaw[i]\n",
     "    # Set all lower case\n",
     "    processed = rawText.lower()\n",
     "    # Remove twitter tags \n",
@@ -301,17 +321,27 @@
     "    processed = processed.translate(str.maketrans(\"\",\"\", string.punctuation))\n",
     "    # Remove whitespaces \n",
     "    processed = processed.strip()\n",
-    "    XCleaned.append(processed)\n",
+    "    textXCleaned.append(processed)\n",
+    "\n",
+    "# Split into training and test sets \n",
+    "# Split training and test sets \n",
+    "textXTrainText, textXTestText, textYTrain, textYTest = \\\n",
+    "    train_test_split(textXCleaned, textY, test_size=0.20)\n",
     "\n",
     "# Use the top 500 most frequently appearing \n",
     "# words for classification\n",
     "# Bag of words approach: \n",
     "vectorizer = CountVectorizer(max_features=500)\n",
-    "XCounts = vectorizer.fit_transform(XCleaned)\n",
+    "textXTrainCounts = vectorizer.fit_transform(textXTrainText)\n",
     "# tf-idf: term frequency-inverse document frequency \n",
     "tfTransformer = TfidfTransformer()\n",
-    "X = tfTransformer.fit_transform(XCounts)\n",
-    "X = X.toarray()\n",
+    "textXTrain = tfTransformer.fit_transform(textXTrainCounts)\n",
+    "textXTrain = textXTrain.toarray()\n",
+    "textXTestCounts = vectorizer.transform(textXTestText)\n",
+    "textXTest = tfTransformer.fit_transform(textXTestCounts)\n",
+    "textXTest = textXTest.toarray()\n",
+    "\n",
+    "# textXTrain, textYTrain, textXTest, textYTest\n",
     "\n",
     "# Our method of vectorizing text input from scratch\n",
     "# Assume cleaned input (no punctuation, same case, etc.)\n",
@@ -340,22 +370,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'numpy.ndarray' object has no attribute 'toarray'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-119-127bd799ee5d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mX\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mX\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtoarray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'numpy.ndarray' object has no attribute 'toarray'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "iter: 0 cost: 1.2034470489406448\n",
+      "iter: 100 cost: 0.5955468521719501\n",
+      "iter: 200 cost: 0.5072853176584807\n",
+      "iter: 300 cost: 0.47582463026668703\n",
+      "iter: 400 cost: 0.4568390093746529\n",
+      "iter: 500 cost: 0.4427773408488948\n",
+      "iter: 600 cost: 0.4314913154220242\n",
+      "iter: 700 cost: 0.42208832703203747\n",
+      "iter: 800 cost: 0.4140851131919014\n",
+      "iter: 900 cost: 0.40717051362315587\n",
+      "Accuracy (Training): 0.733521174863388\n",
+      "Accuracy (Test): 0.7346311475409836\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "# Gradient Descent Training\n",
+    "ws, costs = trainGDMulticlass(textXTrain, textYTrain, 1, 1000, 100, 'l1', 0.1)\n",
+    "\n",
+    "# Evaluation \n",
+    "print(\"Accuracy (Training):\",\n",
+    "    logMulticlassAccuracy(textXTrain, ws, textYTrain))\n",
+    "print(\"Accuracy (Test):\",\\\n",
+    "    logMulticlassAccuracy(textXTest, ws, textYTest))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "iter: 0 cost: 1.1932035901298061\n",
+      "iter: 100 cost: 0.31398756617613877\n",
+      "iter: 200 cost: 0.3125809926971453\n",
+      "iter: 300 cost: 0.31225770007029\n",
+      "iter: 400 cost: 0.3121337699920735\n",
+      "iter: 500 cost: 0.31207295911594385\n",
+      "iter: 600 cost: 0.31203850843729625\n",
+      "iter: 700 cost: 0.3120172871040808\n",
+      "iter: 800 cost: 0.31200327996720234\n",
+      "iter: 900 cost: 0.3119938143894478\n",
+      "Accuracy (Training): 0.8037909836065574\n",
+      "Accuracy (Test): 0.7780054644808743\n"
+     ]
+    }
+   ],
+   "source": [
+    "# AdaGrad Training \n",
+    "ws, costs = trainAdaGradMulticlass(textXTrain,\\\n",
+    "    textYTrain, 1, 1000, 100, 1e-8, 'l1', 0.1)\n",
+    "\n",
+    "# Evaluation \n",
+    "print(\"Accuracy (Training):\",\n",
+    "    logMulticlassAccuracy(textXTrain, ws, textYTrain))\n",
+    "print(\"Accuracy (Test):\",\\\n",
+    "    logMulticlassAccuracy(textXTest, ws, textYTest))"
+   ]
   }
  ],
  "metadata": {
